--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -47,5 +47,4 @@ jobs:
           python -m pip list
 
       - name: Run tests
-        run: |
-          python ./scripts/run_test.py
+        run: python ./scripts/run_tests.py
